Make sure carousel indicators are visible

--- a/css/main.less
+++ b/css/main.less
@@ -921,6 +921,12 @@ footer .footer-below {
   text-align: center;
   margin-bottom: 30px;
 }
+.portfolio-modal .modal-content .carousel-indicators {
+  margin-bottom: -18px;
+  .active { background-color: @green-cc; }
+  li { border-color: @green-cc; }
+}
+
 
 .portfolio-modal .close-modal {
   position: absolute;
